--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="/src/css/layout.css">
-  <link rel="stylesheet" href="/src/css/styles.css">
+  <link rel="stylesheet" href="./src/css/layout.css">
+  <link rel="stylesheet" href="./src/css/styles.css">
 </head>
 <body>
   <header>
     <p><em>History, Tradition, Class</em></p>
     <h1><span>Business</span> Box</h1>
     <a href = "index.html"><button class = "home-button">Home</button></a>
-    <a href = "/src/html/about.html"><button>About Us</button></a>
-    <a href = "/src/html/contact.html"><button>Contact Us</button></a>
+    <a href = "./src/html/about.html"><button>About Us</button></a>
+    <a href = "./src/html/contact.html"><button>Contact Us</button></a>
   </header>
 
   <main>
@@ -21,7 +21,7 @@
       <div class="paz">
         <h1>Template License</h1>
         <h4>Lorem ipsum dolor</h4>
-        <img src = "src/images/img1.jpg" width = "100%">
+        <img src = "./src/images/img1.jpg" width = "100%">
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam itaque laborum eius? Qui dolore sit excepturi numquam mollitia, hic adipisci quia odio earum reiciendis accusantium illum consequatur maiores quam omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, laudantium nemo blanditiis placeat, veritatis soluta delectus, magni reiciendis necessitatibus hic assumenda velit dolor sint eveniet! Rerum at quibusdam itaque dolorum!
         </p>
@@ -33,7 +33,7 @@
       <div class="pax">
         <h1>Lorem ipsum dolor</h1>
         <h4>Lorem ipsum dolor</h4>
-        <img src = "/src/images/img2.jpg" width = "100%">
+        <img src = "./src/images/img2.jpg" width = "100%">
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam itaque laborum eius? Qui dolore sit excepturi numquam mollitia, hic adipisci quia odio earum reiciendis accusantium illum consequatur maiores quam omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, laudantium nemo blanditiis placeat, veritatis soluta delectus, magni reiciendis necessitatibus hic assumenda velit dolor sint eveniet! Rerum at quibusdam itaque dolorum!
         </p>
@@ -70,7 +70,7 @@
       <div class="pav">
         <h1>Contrary to belief</h1>
         <h4>Lorem ipsum dolor</h4>
-        <img src = "/src/images/img3.jpg" width = "100%">
+        <img src = "./src/images/img3.jpg" width = "100%">
         <p>
           <span>Lorem Ipsum is a placeholder text commonly used in the printing and typesetting industry.</span><br><br>It has been the industry's standard dummy text since the 1500s, when an unknown printer scrambled a type galley to create a specimen book. Its purpose is to provide a visual representation of text layout without relying on meaningful content, allowing designers to focus on elements like fonts, spacing, and composition.
         </p>
@@ -82,7 +82,7 @@
       <div class="pab">
         <h1>Template license</h1>
         <h4>Lorem ipsum dolor</h4>
-        <img src = "/src/images/img4.jpg" width = "100%">
+        <img src = "./src/images/img4.jpg" width = "100%">
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam itaque laborum eius? Qui dolore sit excepturi numquam mollitia, hic adipisci quia odio earum reiciendis accusantium illum consequatur maiores quam omnis.
         </p>
@@ -97,15 +97,15 @@
       <h2>About</h2>
       <h2>Contact</h2>
       <div class = "images">
-        <img src = "/src/images/pix1.jpg">
-        <img src = "/src/images/pix2.jpg">
-        <img src = "/src/images/pix3.jpg">
-        <img src = "/src/images/pix4.jpg">
-        <img src = "/src/images/pix5.jpg">
-        <img src = "/src/images/pix6.jpg">
+        <img src = "./src/images/pix1.jpg">
+        <img src = "./src/images/pix2.jpg">
+        <img src = "./src/images/pix3.jpg">
+        <img src = "./src/images/pix4.jpg">
+        <img src = "./src/images/pix5.jpg">
+        <img src = "./src/images/pix6.jpg">
       </div>
       <div class="about-image">
-        <img src = "/src/images/white.jpg">
+        <img src = "./src/images/white.jpg">
         whats Lorem ipsum dolor wh elit. Molestias quae nemo quas rem veritatis.<br> nulla a magni provident harum architecto quos fugit amet voluptate ipsum quidem deleniti in odio.
         whats Lorem ipsum dolor sit amet.<br> consectetur adipisicing elit. Molestias quae nemo quas rem veritatis, culpa nulla.<br>
         <a href="https://www.canva.com/education/" target="_blank">learn More...</a>
