--- a/src/html/about.html
+++ b/src/html/about.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
-  <link rel="stylesheet" href="./src/css/layout.css">
-  <link rel="stylesheet" href="./src/css/styles.css">
+  <link rel="stylesheet" href="../src/css/layout.css">
+  <link rel="stylesheet" href="../src/css/styles.css">
   
 </head>
 <body>
@@ -13,9 +13,9 @@
     <p><em>History, Tradition, Class</em></p>
     <h1><span>Business</span> Box</h1>
 
-    <a href = "./index.html"><button>Home</button></a>
-    <a href = "./src/html/about.html"><button class = "about-button">About Us</button></a>
-    <a href = "./src/html/contact.html"><button>Contact Us</button></a>
+    <a href = "../index.html"><button>Home</button></a>
+    <a href = "../src/html/about.html"><button class = "about-button">About Us</button></a>
+    <a href = "../src/html/contact.html"><button>Contact Us</button></a>
   </header> 
 
   <main>
@@ -63,15 +63,15 @@
       <h2>About</h2>
       <h2>Contact</h2>
       <div class = "images">
-        <img src = "./src/images/pix1.jpg">
-        <img src = "./src/images/pix2.jpg">
-        <img src = "./src/images/pix3.jpg">
-        <img src = "./src/images/pix4.jpg">
-        <img src = "./src/images/pix5.jpg">
-        <img src = "./src/images/pix6.jpg">
+        <img src = "../src/images/pix1.jpg">
+        <img src = "../src/images/pix2.jpg">
+        <img src = "../src/images/pix3.jpg">
+        <img src = "../src/images/pix4.jpg">
+        <img src = "../src/images/pix5.jpg">
+        <img src = "../src/images/pix6.jpg">
       </div>
       <div class="about-image">
-        <img src = "./src/images/white.jpg">
+        <img src = "../src/images/white.jpg">
         whats Lorem ipsum dolor wh elit. Molestias quae nemo quas rem veritatis.<br> nulla a magni provident harum architecto quos fugit amet voluptate ipsum quidem deleniti in odio.
         whats Lorem ipsum dolor sit amet.<br> consectetur adipisicing elit. Molestias quae nemo quas rem veritatis, culpa nulla.<br>
         <a href="https://www.canva.com/education/" target="_blank">learn More...</a>
