--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -12,9 +12,9 @@
     <p><em>History, Tradition, Class</em></p>
     <h1><span>Business</span> Box</h1>
 
-    <a href = ".../index.html"><button>Home</button></a>
-    <a href = "../html/about.html"><button>About Us</button></a>
-    <a href = "../html/contact.html"><button class = "contact-button">Contact Us</button></a>
+    <a href = "../index.html"><button>Home</button></a>
+    <a href = "./html/about.html"><button>About Us</button></a>
+    <a href = "./html/contact.html"><button class = "contact-button">Contact Us</button></a>
   </header> 
 
   <main>
