--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1><span>Business</span> Box</h1>
     <a href = "index.html"><button class = "home-button">Home</button></a>
     <a href = "./src/html/about.html"><button>About Us</button></a>
-    <a href = "./src/html/contact.html"><button>Contact Us</button></a>
+    <a href = "./html/contact.html"><button>Contact Us</button></a>
   </header>
 
   <main>
