--- a/src/html/about.html
+++ b/src/html/about.html
@@ -13,7 +13,7 @@
     <p><em>History, Tradition, Class</em></p>
     <h1><span>Business</span> Box</h1>
 
-    <a href = "./index.html"><button>Home</button></a>
+    <a href = "../../index.html"><button>Home</button></a>
     <a href = "../html/about.html"><button class = "about-button">About Us</button></a>
     <a href = "../html/contact.html"><button>Contact Us</button></a>
   </header> 
