--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -75,15 +75,15 @@
       <h2>About</h2>
       <h2>Contact</h2>
       <div class = "images">
-        <img src = "./src/images/pix1.jpg">
-        <img src = "./src/images/pix2.jpg">
-        <img src = "./src/images/pix3.jpg">
-        <img src = "./src/images/pix4.jpg">
-        <img src = "./src/images/pix5.jpg">
-        <img src = "./src/images/pix6.jpg">
+        <img src = "../images/pix1.jpg">
+        <img src = "../images/pix2.jpg">
+        <img src = "../images/pix3.jpg">
+        <img src = "../images/pix4.jpg">
+        <img src = "../images/pix5.jpg">
+        <img src = "../images/pix6.jpg">
       </div>
       <div class="about-image">
-        <img src = "./src/images/white.jpg">
+        <img src = "../images/white.jpg">
         whats Lorem ipsum dolor wh elit. Molestias quae nemo quas rem veritatis.<br> nulla a magni provident harum architecto quos fugit amet voluptate ipsum quidem deleniti in odio.
         whats Lorem ipsum dolor sit amet.<br> consectetur adipisicing elit. Molestias quae nemo quas rem veritatis, culpa nulla.<br>
         <a href="https://www.canva.com/education/" target="_blank">learn More...</a>
